Actualización completa del proyecto