@@ -1,12 +1,13 @@
-package com.example.demo.ordenes.domain;
+package com.example.demo.shared.domain;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import jakarta.persistence.Embeddable;
 import java.math.BigDecimal;
 import java.util.Objects;
-import jakarta.persistence.Embeddable;
 
 /**
- * Valores monetarios inmutables para subtotal, descuento y total.
- * Preserva los montos exactos de la transacción.
+ * Value Object inmutable que representa una cantidad monetaria con su moneda.
  */
 @Embeddable
 public final class Money {
@@ -14,38 +15,23 @@ public final class Money {
     private final BigDecimal cantidad;
     private final String moneda;
 
-    /**
-     * Constructor protegido para frameworks de persistencia.
-     */
     protected Money() {
         this.cantidad = null;
         this.moneda = null;
     }
 
-    /**
-     * Crea una nueva instancia de Money.
-     * 
-     * @param cantidad La cantidad numérica.
-     * @param moneda   El código de la moneda (ej. "MXN").
-     * @throws IllegalArgumentException si la cantidad o moneda son nulas.
-     */
-    public Money(BigDecimal cantidad, String moneda) {
+    @JsonCreator
+    public Money(@JsonProperty("cantidad") BigDecimal cantidad, @JsonProperty("moneda") String moneda) {
         if (cantidad == null) {
             throw new IllegalArgumentException("La cantidad no puede ser nula");
         }
-        if (moneda == null || moneda.trim().isEmpty()) {
+        if (moneda == null || moneda.isBlank()) {
             throw new IllegalArgumentException("La moneda no puede estar vacía");
         }
         this.cantidad = cantidad;
         this.moneda = moneda;
     }
 
-    /**
-     * Crea un objeto Money en pesos mexicanos (MXN).
-     * 
-     * @param cantidad Cantidad numérica.
-     * @return Nueva instancia de Money.
-     */
     public static Money pesos(double cantidad) {
         return new Money(BigDecimal.valueOf(cantidad), "MXN");
     }
@@ -66,18 +52,20 @@ public final class Money {
 
     public Money multiplicar(int factor) {
         if (factor < 0) {
-            throw new IllegalArgumentException("El factor no puede ser negativo");
+            throw new IllegalArgumentException("El factor de multiplicación no puede ser negativo");
         }
         return new Money(this.cantidad.multiply(BigDecimal.valueOf(factor)), this.moneda);
     }
 
     private void validarMismaMoneda(Money otro) {
-        if (otro == null || !this.moneda.equals(otro.moneda)) {
-            throw new IllegalArgumentException("Las monedas deben ser iguales para operar");
+        if (otro == null) {
+            throw new IllegalArgumentException("El otro Money no puede ser nulo");
+        }
+        if (!this.moneda.equals(otro.moneda)) {
+            throw new IllegalArgumentException("No se pueden operar monedas distintas: " + this.moneda + " y " + otro.moneda);
         }
     }
 
-    // Getters
     public BigDecimal getCantidad() {
         return cantidad;
     }
@@ -88,13 +76,11 @@ public final class Money {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o)
-            return true;
-        if (o == null || getClass() != o.getClass())
-            return false;
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
         Money money = (Money) o;
         return Objects.equals(cantidad, money.cantidad) &&
-                Objects.equals(moneda, money.moneda);
+               Objects.equals(moneda, money.moneda);
     }
 
     @Override
